hotfix: fix horizontal overflow bug from input

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  /* font-size: 16px; */
+  /* line-height: 24px; */
   font-weight: 400;
   overflow-x: hidden;
 
@@ -26,6 +26,7 @@ a:hover {
 }
 
 body {
+  max-width: 100vw;
   margin: 0;
   padding: 0;
 
